--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Marioclub</h1>
     </header>
     <section class="section-one">
-        <img src="images/banner.png" alt="marionoclub images" />
+        <img src="/Images/banner.png" alt="marionoclub images" />
         <div class="welcomenote">
             <h1>Welcome to<br><span>Marioclub</span> </h1>
         </div>
