--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Marioclub</h1>
     </header>
     <section class="section-one">
-        <img src="/Images/banner.png" alt="marionoclub images" />
+        <img src="./Images/banner.png" alt="marionoclub images" />
         <div class="welcomenote">
             <h1>Welcome to<br><span>Marioclub</span> </h1>
         </div>
@@ -36,8 +36,8 @@
         </section>
         <section class="section-3">
             <ul>
-            <li><img src="/Images/thumb-1.png"alt="marioclub images"></li>
-            <li><img src="/Images/thumb-2.png"alt="marionoclub images"></li>
+            <li><img src="./Images/thumb-1.png"alt="marioclub images"></li>
+            <li><img src="./Images/thumb-2.png"alt="marionoclub images"></li>
         </ul>
         </section>
     </main>
